# networkspark

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
.github/workflows/: CD.yml  CI.yml  DESTROY.yml
app/: app.py  db.py  users.py
backend/: .flake8  Dockerfile  pyproject.toml
backend/app/: app.py  db.py  health.py  main.py  schemas.py
infra/: docker-compose.yml
infra/prod/: main.tf  network.tf  variables.tf
infra/setup/: ecr.tf  iam.tf  main.tf  outputs.tf  variables.tf
